# aoc-2024

./: Cargo.nix  README.md  cspell.yaml  flake.nix  justfile
src/day-01/: Cargo.toml
src/day-02/: Cargo.toml
src/day-03/: Cargo.toml
src/day-03/src/: main.rs
src/day-04/: Cargo.toml
src/day-05/: Cargo.toml
src/day-06/: Cargo.toml
src/day-07/: Cargo.toml
src/day-07/src/: main.rs
src/day-08/: Cargo.toml
src/day-09/: Cargo.toml
src/day-1/: Cargo.toml
src/day-10/: Cargo.toml
src/day-11/: Cargo.toml
src/day-11/src/: main.rs
src/day-12/: Cargo.toml
src/day-13/: Cargo.toml
src/day-13/src/: main.rs
src/day-14/: Cargo.toml
src/day-15/: Cargo.toml
src/day-16/: Cargo.toml
src/day-16/src/: main.rs
src/day-2/: Cargo.toml
src/day-3/: Cargo.toml
src/day-4/: Cargo.toml
src/day-5/: Cargo.toml
src/day-6/: Cargo.toml
src/day-7/: Cargo.toml
src/day-7/src/: main.rs
src/day-8/: Cargo.toml
src/day-8/src/: main.rs
src/day-9/: Cargo.toml
src/day-9/src/: main.rs
