[package]
name = "day-07"
version = "0.1.0"
description = "Advent of Code 2024 day 7 solution"
repository = "https://gitlab.com/haras-unicorn/aoc-2024"
authors = ["haras <social@haras.anonaddy.me>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
convert-base = "1.1.2"
itertools = "0.13.0"
pad = "0.1.6"
radix_fmt = "1.0.0"
