[package]
name = "day-08"
version = "0.1.0"
description = "Advent of Code 2024 day 8 solution"
repository = "https://gitlab.com/haras-unicorn/aoc-2024"
authors = ["haras <social@haras.anonaddy.me>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
